<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_storefront_24"
            android:title="@string/carbzee" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/switch_to_driver"
            android:title="@string/driver" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_SignOut"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/signout" />
    </group>
</menu>