<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".Login_Activity"
    android:focusable="true">


    <ImageView
        android:id="@+id/image"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center|top"
        android:src="@drawable/business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:clickable="true"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="16dp"
        android:elevation="6dp"
        android:ems="15"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/with_phone"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/google"
        android:layout_width="0dp"
        android:drawableStart="@drawable/baseline_cloud_24"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:drawablePadding="16dp"
        android:textSize="18sp"
        android:clickable="true"
        android:elevation="6dp"
        android:ems="15"
        android:padding="16dp"
        android:text="@string/with_google"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone"
        android:focusable="true"
        tools:ignore="VisualLintButtonSize" />




</androidx.constraintlayout.widget.ConstraintLayout>