<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".phoneLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phonelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/to_do"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/carp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="181dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="IND"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="188dp"
            android:layout_height="73dp"
            android:autofillHints=""
            android:hint="@string/e_g_999999999"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#006064"
            app:layout_constraintBottom_toBottomOf="@id/ccp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="@id/ccp"
            app:layout_constraintTop_toTopOf="@+id/ccp"
            app:layout_constraintVertical_bias="0.666"
            app:srcCompat="@drawable/carp" />



    </androidx.constraintlayout.widget.ConstraintLayout>





    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:id="@+id/bar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:progressTint="@color/colorPrimaryDark"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="418dp"
        android:layout_height="423dp"
        android:contentDescription="@string/to_do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/carp" />

    <com.chaos.view.PinView
        android:id="@+id/pin"
        style="@style/PinWidget.PinView"
        android:layout_width="311dp"
        android:layout_height="65dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:hint="@string/hint"
        android:inputType="number"
        android:itemBackground="@color/highlight"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:focusable="true"
        android:visibility="gone"
        app:cursorColor="@color/colorPrimaryDark"
        app:cursorWidth="2dp"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="10dp"
        app:itemSpacing="10dp"
        app:itemWidth="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        app:lineColor="@color/colorPrimaryDark"
        app:lineWidth="2dp"
        app:viewType="rectangle" />



</androidx.constraintlayout.widget.ConstraintLayout>